docs: add bearer authentication docs to get profile endpoint
